<resources>
    <string name="app_name">TuTiendaMovil</string>
    <string name="Nombre">Nombre</string>
    <string name="Email">E-mail</string>
    <string name="Contraseña">Contraseña</string>
    <string name="Verificar_contraseña">Ingrese nuevamente su contraseña</string>
    <string name="Direccion">Dirección</string>
    <string name="Celular">Celular</string>
    <string name="Selec_categoria">Seleccione una categoría</string>
    <string name="Imagen">Seleccione una imágen</string>
    <string name="Titulo">TuTiendaMovil</string>
    <string name="Inicio">Inicio</string>
    <string name="Registro">Registro</string>
    <string-array name="Desplegable_categoria">
        <item>Tienda de articulos varios</item>
        <item>Alimentos y bebidas</item>
        <item>Educación</item>
        <item>Entretenimiento</item>
        <item>Salud</item>
        <item>Transporte</item>
        <item>Vestimenta</item>

    </string-array>
    <string name="Boton_formulario">Registrarse</string>
    <string name="boton_login">iniciar session</string>
    <string name="Sub_titulo_crear">Ingrese los datos de su Tienda</string>
    <string name="Boton_seleccionar_imagen">"Seleccionar imagen "</string>
    <string name="imagen_a_cargar">cargando imagen</string>
    <string name="Nombre_inicial">Pone tu tienda en linea</string>
    <string name="Btn_ver_todas">Ver todas las tiendas</string>
    <string name="buscar_por_contenido">"Buscar "</string>
    <string name="buscar_cercanas">Buscar tiendas cerca</string>
    <string name="hint_buscar">Buscar tiendas que coincidan con...</string>
    <string name="sub_t_buscar_cerca">Buscar tiendas en un rango de ...</string>
    <string name="sub_logeado">Tu Info</string>
    <string name="sub_productos" />
    <string name="sub_visitante">Tiendas Registradas</string>
    <string name="pie_pag">RecoLab - Proyecto b_IT 2020</string>
    <string name="sub_ubicacion">Obteniendo datos de GPS</string>
</resources>
