<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/degradado_claro"
    tools:context=".Visitante_inicio">

    <TextView
        android:id="@+id/titulo"
        android:layout_width="239dp"
        android:layout_height="49dp"
        android:layout_marginTop="44dp"
        android:text="@string/Titulo"
        android:textAlignment="center"
        android:textSize="@dimen/Tamaño_titulo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/ver_todas_tiendas"
        android:layout_width="244dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:background="@drawable/diseno_botones"
        android:onClick="ver_todas_tiendas"
        android:text="@string/Btn_ver_todas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titulo" />

    <Button
        android:id="@+id/buscar_por_contenido"
        android:layout_width="244dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:background="@drawable/diseno_botones"
        android:onClick="buscar_intent"
        android:text="@string/buscar_por_contenido"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ver_todas_tiendas" />

    <Button
        android:id="@+id/buscar_cercanas"
        android:layout_width="244dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:background="@drawable/diseno_botones"
        android:onClick="buscar_cerca_intent"
        android:text="@string/buscar_cercanas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buscar_por_contenido" />

    <Button
        android:id="@+id/crear_tienda"
        android:layout_width="244dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:background="@drawable/diseno_botones"
        android:onClick="registrarse_desde_visitante"
        android:text="@string/Boton_formulario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buscar_cercanas" />

    <Button
        android:id="@+id/iniciar_sesion"
        android:layout_width="244dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:background="@drawable/diseno_botones"
        android:onClick="login_desde_visitante"
        android:text="@string/boton_login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/crear_tienda"
        app:layout_constraintVertical_bias="0.14" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:text="@string/pie_pag"
        android:textColor="@color/color_pie"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iniciar_sesion" />
</androidx.constraintlayout.widget.ConstraintLayout>