<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/degradado_claro"
    tools:context=".Crear_tienda">

    <TextView
        android:id="@+id/Titulo_crear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Titulo"
        android:textAlignment="center"
        android:textSize="@dimen/Tamaño_titulo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="394dp"
        android:layout_height="521dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1" />

            <EditText
                android:id="@+id/Nombre_ingresado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints=""
                android:hint="@string/Nombre"
                android:inputType="text"
                android:textAlignment="center"
                android:textSize="@dimen/Tamaño_comun" />

            <EditText
                android:id="@+id/Direccion_ingresada"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/Direccion"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textAlignment="center"
                android:textSize="@dimen/Tamaño_comun" />

            <EditText
                android:id="@+id/Telefono_ingresado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Celular"
                android:importantForAutofill="no"
                android:inputType="phone"
                android:textAlignment="center"
                android:textSize="@dimen/Tamaño_comun" />

            <EditText
                android:id="@+id/Correo_ingresado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints=""
                android:hint="@string/Email"
                android:inputType="textEmailAddress"
                android:textAlignment="center"
                android:textSize="@dimen/Tamaño_comun" />

            <EditText
                android:id="@+id/Contrasena_ingresada"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/Contraseña"
                android:inputType="textPassword"
                android:textAlignment="center"
                android:textSize="@dimen/Tamaño_comun" />

            <ImageView
                android:id="@+id/imagen_cargada"
                android:layout_width="381dp"
                android:layout_height="wrap_content"
                android:contentDescription="@string/imagen_a_cargar"
                app:srcCompat="@drawable/logo_tienda_bmp" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="match_parent"
                android:layout_height="14dp"
                android:layout_weight="1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView15"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/Boton_seleccionar_imagen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/diseno_botones"
                    android:onClick="onClick"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="@string/Boton_seleccionar_imagen"
                    android:textAlignment="textEnd" />

                <TextView
                    android:layout_width="3dp"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/Boton_crear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/diseno_botones"
                    android:onClick="Envair_datos"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:text="@string/Boton_formulario" />

                <TextView
                    android:id="@+id/textView17"
                    android:layout_width="20dp"
                    android:layout_height="wrap_content" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>